--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Curso métodos computacionales
-description: Pagina web del curso de metodos computacionales
+title: Fundamentos en ciencia de datos
+description: Curso de ciencias de datos de la universidad de Antioquia
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
